# Render_Projects

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
.github/workflows/: cmake.yml
TinyKaboom/: CMakeLists.txt  main.cpp  readme.md
TinyRaytracer/: CMakeLists.txt  main.cpp
include/: geometry.h  geometry_tk.h  geometry_tr.h
